--- a/css.html
+++ b/css.html
@@ -14,22 +14,26 @@
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     </head>
     <body>
-        <header class="flex-container">
-            <img src="logo png.png  11.png" alt="">
-            <div class="barre-d-r">
-                  <form> 
-                    <input type="search" name="barre de recherce" placeholder="Search..">
-                    <i class="fa fa-search"></i>
-                </form>
-                </div>
-                <nav>
-                  <ul>
-                      <span><li><a href="index.html">Accueil</a></li></span>
-                      <span><li><a href="#footer">À propos</a></li></span>
-                      <span><li><a href="#contact">Contact</a></li></span>
-                  </ul>
-                </nav>
-        </header>
+      <header>
+        <div class="flex-container">
+        <img src="logo png.png  11.png" alt="">
+        <div class="barre-d-r">
+        <form> 
+            <input type="search" name="barre de recherce" placeholder="Search..">
+            <i class="fa fa-search"></i>
+        </form>
+        </div>
+        <div class="navbar">
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="#footer">À propos</a></li>
+               <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        </div>
+    </header>
         <div id="main">
           <div class="menu-flottant">
             <ul>
@@ -85,16 +89,17 @@
       </p>
       </form>
         </div>
-        <footer  id="footer">
-            <div class="flex-container"> 
-              &copy; Copyright-2021 Aucun droit réservé
-               <div class="rs">
-               <span>Follow Us</span>
-               <i class="fab fa-facebook  fa-2x"></i>
-               <i class="fab fa-twitter-square  fa-2x"></i>
-               <i class="fab fa-github  fa-2x"></i>
-               <i class="fab fa-instagram  fa-2x"></i>
-               </div>
-           </div> 
-        </footer>
+        <footer>
+          <div class="rs">
+              <span>Follow Us</span>
+              <i class="fab fa-facebook  fa-2x"></i>
+              <i class="fab fa-twitter-square  fa-2x"></i>
+              <i class="fab fa-github  fa-2x"></i>
+              <i class="fab fa-instagram  fa-2x"></i>
+              <div class="tm"> 
+               &copy; Copyright-2021 Aucun droit réservé
+              </div>
+          </div> 
+       </footer>
     </body>
+    </html>
