--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
           type="image/x-icon">
          <link rel="stylesheet" 
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
+         
+        <meta name="viewport" content="width= 1024px, initial-scale=1.0">
+
     </head>
     <body>
-        <header class="flex-container">
+        <header>
+            <div class="flex-container">
             <img src="logo png.png  11.png" alt="">
             <div class="barre-d-r">
             <form> 
@@ -22,34 +26,39 @@
                 <i class="fa fa-search"></i>
             </form>
             </div>
+            <div class="navbar">
             <nav>
                 <ul>
-                    <span><li><a href="index.html">Accueil</a></li></span>
-                    <span><li><a href="#footer">À propos</a></li></span>
-                    <span><li><a href="#contact">Contact</a></li></span>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="#footer">À propos</a></li>
+                   <li><a href="#contact">Contact</a></li>
                 </ul>
               </nav>
+            </div>
+            </div>
         </header>
-        <div id="main">
+        <main>
+        <div id="main_princ">
             <div class="containers">
                 <h1 class="tp">Les principaux langages web et leurs rôles</h1>
                 <div class="cont-item">
-                    <img src="html-5-.jpg" alt="">
+                    <a href="html.html"><img src="html-5-.jpg" alt=""></a> 
                     <a href="html.html"><button>Affichage du contenu d’une page Internet</button></a>                   
                 </div>
                 <div class="cont-item">
-                    <img src="cssn.jpg" alt="">
+                    <a href="css.html"><img src="cssn.jpg" alt=""></a>
                     <a href="css.html"><button>Mise en forme du contenu  d’une page Internet(mise en page)</button></a>
                 </div>
                 <div class="cont-item">
-                    <img src="php-l.jpg" alt="">
+                    <a href="php.html"><img src="php-l.jpg" alt=""></a>
                     <a href="php.html"><button>Interaction – Animation sur une page Web</button></a> 
                 </div>
                 <div class="cont-item">
-                    <img src="java-light.jpg" alt="">
+                    <a href="javascript.html"><img src="java-light.jpg" alt=""></a>
                     <a href="javascript.html"><button> Création de pages dynamiques et sécurité des données</button></a> 
                 </div>
             </div>
+        </main>
         </div>
                                          <!--section contact-->
  <div class="conct" id="contact">
@@ -70,16 +79,17 @@
         </p>
          </form>
 </div>
-        <footer id="À propos">
-            <div class="flex-container"> 
-                &copy; Copyright-2021 Aucun droit réservé
-               <div class="rs">
+        <footer>
+           <div class="rs">
                <span>Follow Us</span>
                <i class="fab fa-facebook  fa-2x"></i>
                <i class="fab fa-twitter-square  fa-2x"></i>
                <i class="fab fa-github  fa-2x"></i>
                <i class="fab fa-instagram  fa-2x"></i>
+               <div class="tm"> 
+                &copy; Copyright-2021 Aucun droit réservé
                </div>
            </div> 
         </footer>
     </body>
+    </html>
